# genie-sim

./: .gitignore  GENIE_SIM_USER_GUIDE.md  INSTALLATION.md  requirements.txt
config/: cyclonedds.xml
dashboard/: Dockerfile  Dockerfile.offline  USAGE.md  app.py  config.py  dataset_player.py  fleet_config.yaml  requirements.txt  rerun_visualizer.py  ros_subscriber.py  yolo_detector.py
dashboard/scripts/: yolo_webcam_smoke_test.py
dashboard/static/: index.html
dashboard/static/js/: dashboard.js
docker/: .env.example  Dockerfile  README.md  docker-compose.data-collection.yaml  docker-compose.full.yaml  docker-compose.headless.yaml  docker-compose.x11.yaml  entrypoint.sh  smoke-test.sh
scripts/: autoteleop.sh  autoteleop_log.sh  dockerfile.dev  entrypoint.sh  start_dashboard.sh  start_dashboard_offline.sh  start_dev.sh  start_gui.sh  start_headless.sh
source/chaser_brain/: .env.example  server.py
source/data_collection/scripts/: run_data_collection.sh  start_gui.sh
source/geniesim/app/controllers/: api_core.py
source/geniesim/config/: config.yaml  icra_stock_and_straighten_shelf.yaml  teleop.yaml
source/sam3_tracker/: app.py  tracker.py  visualizer.py
source/sam3_tracker/configs/: default.yaml
source/scene_reconstruction/: Dockerfile
source/teleop/: pyproject.toml  teleop.py
source/teleop/devices/: meta_quest_device.py  pico_device.py
source/teleop/scripts/: smoke_test_teleop.py
source/teleop/utils/: quest_bridge.py  quest_diagnostics.py  quest_visualizer.py  rerun_logger.py  ros_nodes.py  vr_server.py
(+2 files in other folders)
